# FFMPEG4Android

./: README.md  build_configure.sh  settings.gradle
DemoANativeRender/: CMakeLists.txt  build.gradle
DemoANativeRender/src/androidTest/java/com/jiangdg/nativewindow/: ExampleInstrumentedTest.java
DemoANativeRender/src/main/: AndroidManifest.xml
DemoANativeRender/src/main/cpp/: ffmpeg_render.cpp  ffmpeg_render.h  native_render.cpp  utils_render.cpp  utils_render.h  window_render.cpp  window_render.h
DemoANativeRender/src/main/java/com/jiangdg/natives/: RenderUtil.java
DemoANativeRender/src/main/java/com/jiangdg/nativewindow/: MainActivity.java
DemoANativeRender/src/main/res/layout/: activity_main.xml
DemoANativeRender/src/main/res/values/: strings.xml
DemoANativeRender/src/test/java/com/jiangdg/nativewindow/: ExampleUnitTest.java
DemoDemuxerMP4/: CMakeLists.txt  build.gradle
DemoDemuxerMP4/src/androidTest/java/com/jiangdg/dmp4/: ExampleInstrumentedTest.java
DemoDemuxerMP4/src/main/: AndroidManifest.xml
DemoDemuxerMP4/src/main/cpp/: ffmpeg_demuxer.cpp  ffmpeg_demuxer.h  native_demuxer.cpp  native_demuxer.h  utils_demuxer.cpp  utils_demuxer.h
DemoDemuxerMP4/src/main/java/com/jiangdg/dmp4/: MainActivity.java
DemoDemuxerMP4/src/main/java/com/jiangdg/natives/: DemuxerUtil.java
DemoDemuxerMP4/src/main/res/layout/: activity_main.xml
DemoDemuxerMP4/src/main/res/values/: strings.xml
DemoDemuxerMP4/src/test/java/com/jiangdg/dmp4/: ExampleUnitTest.java
DemoOpenSLES/: CMakeLists.txt  build.gradle
DemoOpenSLES/src/androidTest/java/com/jiangdg/opensles/: ExampleInstrumentedTest.java
DemoOpenSLES/src/main/: AndroidManifest.xml
DemoOpenSLES/src/main/cpp/: common.h  ffmpeg_audio.cpp  ffmpeg_audio.h  native_opensles.cpp  native_opensles.h  openSLES_audio.cpp  openSLES_audio.h  threads_play_audio.cpp  utils_audio.cpp  utils_audio.h
DemoOpenSLES/src/main/cpp/include/: cmdutils.h  ffmpeg.h
DemoOpenSLES/src/main/java/com/jiangdg/natives/: PlayAudioUtil.java
DemoOpenSLES/src/main/java/com/jiangdg/opensles/: PlayAudioActivity.java
DemoOpenSLES/src/main/res/layout/: activity_play_audio.xml
DemoOpenSLES/src/main/res/values/: strings.xml
DemoOpenSLES/src/test/java/com/jiangdg/opensles/: ExampleUnitTest.java
DemoSaveFile/: CMakeLists.txt  build.gradle
DemoSaveFile/src/androidTest/java/com/jiangdg/savefile/: ExampleInstrumentedTest.java
DemoSaveFile/src/main/: AndroidManifest.xml
DemoSaveFile/src/main/cpp/: ffmpeg_save.cpp  ffmpeg_save.h  native_save.cpp  native_save.h
DemoSaveFile/src/main/java/com/jiangdg/natives/: SaveStreamUtil.java
DemoSaveFile/src/main/java/com/jiangdg/savefile/: MainActivity.java
DemoSaveFile/src/main/res/layout/: activity_main.xml
DemoSaveFile/src/main/res/values/: strings.xml
DemoSaveFile/src/test/java/com/jiangdg/savefile/: ExampleUnitTest.java
LibSDL2/: build.gradle
LibSDL2/src/androidTest/java/com/jiangdg/libsdl2/: ExampleInstrumentedTest.java
LibSDL2/src/main/: AndroidManifest.xml
LibSDL2/src/main/java/com/jiangdg/libsdl2/: MainActivity.java
LibSDL2/src/main/jni/: Application.mk
LibSDL2/src/main/res/values/: strings.xml
LibSDL2/src/test/java/com/jiangdg/libsdl2/: ExampleUnitTest.java
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/jiangdg/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FFMPEG4Android.c  NativeFFmpeg.cpp  NativeFFmpeg.h  NativeSurface.cpp  NativeSurface.h  SaveStream.cpp  SaveStream.h  com_jiangdg_ffmpeg_VideoFixUtils.h  nativesurface.cpp  util.cpp
app/src/main/cpp/include/: config.h
app/src/main/cpp/include/libavutil/: timer.h
app/src/main/cpp/lessons/: Global.cpp  Global.h  SaveStream.cpp  SaveStream.h
app/src/main/cpp/lessons/PlayAudio/: ffmpeg_audio.cpp  ffmpeg_audio.h  openSLES_audio.cpp  openSLES_audio.h  threads_play_audio.cpp  threads_play_audio.h  utils_audio.cpp  utils_audio.h
app/src/main/cpp/lessons/PlayStream/: ffmpeg_stream.cpp  ffmpeg_stream.h  native_window.cpp  native_window.h  openSLES_stream.cpp  openSLES_stream.h  queue_stream.cpp  queue_stream.h  threads_play_stream.cpp  threads_play_stream.h
app/src/main/cpp/lessons/PlayVideo/: ffmpeg_video.cpp  ffmpeg_video.h  nativeWindow_video.cpp  nativeWindow_video.h  threads_play_video.cpp  threads_play_video.h  utils_video.cpp  utils_video.h
app/src/main/cpp/lessons/SaveStream/: ffmpeg_save.cpp  ffmpeg_save.h  thread_save_streams.cpp  thread_save_streams.h
app/src/main/java/com/jiangdg/ffmpeg/: MainActivity.java  VideoFixUtils.java
app/src/main/java/com/jiangdg/ffmpeg/lessons/: DrawStreamActivity.java  PlayAudioActivity.java  PlayMediaActivity.java  PlayVideoActivity.java  SaveStreamActivity.java
app/src/main/java/com/jiangdg/ffmpeg/lessons/utils/: VideoSurface.java
app/src/main/java/com/jiangdg/natives/: NativeFFmpeg.java
app/src/main/java/com/teligen/ffmpeg/: FfmpegUtils.java  VideoSurface.java
app/src/main/res/layout/: activity_draw_stream.xml  activity_main.xml  activity_play_video.xml  activity_save_stream.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/jiangdg/ffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
